--- a/.github/workflows/load_balancer.yml
+++ b/.github/workflows/load_balancer.yml
@@ -28,7 +28,7 @@ jobs:
           TARGET_GROUP_NAME="my-target-group"
           VPC_ID=$(aws ec2 describe-vpcs --query "Vpcs[0].VpcId" --output text)
           SUBNET_IDS=$(aws ec2 describe-subnets --filters Name=vpc-id,Values=$VPC_ID --query "Subnets[*].SubnetId" --output text)
-          INSTANCE_IDS=$(aws ec2 describe-instances --filters "Name=instance-state-name,Values=running" --query "Reservations[*].Instances[*].InstanceId" --output text)
+          INSTANCE_IDS=$(aws ec2 describe-instances --filters "Name=instance-state-name,Values=running" "Name=vpc-id,Values=$VPC_ID" --query "Reservations[*].Instances[*].InstanceId" --output text)
           
           # Create Load Balancer
           LB_ARN=$(aws elbv2 create-load-balancer \
