--- a/.github/workflows/load_balancer.yml
+++ b/.github/workflows/load_balancer.yml
@@ -52,8 +52,8 @@ jobs:
             --port 80 \
             --vpc-id $VPC_ID \
             --health-check-protocol HTTP \
-            --health-check-path / \
-            --health-check-interval-seconds 30 \
+            --health-check-path /health
+            --health-check-interval-seconds 60 \
             --query "TargetGroups[0].TargetGroupArn" \
             --output text)
 
